feat: auth flow prototype

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,11 +15,7 @@
           "internal",
           ["parent", "sibling", "index"]
         ],
-        "newlines-between": "always",
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        }
+        "newlines-between": "always"
       }
     ],
     "@typescript-eslint/no-unused-vars": [
