--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.16",
+    "next-client-cookies": "^1.1.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
