--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^1.0.0",
+    "cmdk": "0.2.1",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-auth": "5.0.0-beta.16",
